--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -28,12 +28,14 @@ $transition-duration-long: .5s;
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
 
 .flex {
   display: flex;
   align-items: center;
   flex-flow: row;
+  overflow: hidden;
 }
 .golden-sign {
   margin-left: 70px;
@@ -62,6 +64,7 @@ $transition-duration-long: .5s;
 
 .standard-block {
   padding: 105px 0;
+  overflow: hidden;
 }
 
 .btn {
@@ -127,6 +130,7 @@ $transition-duration-long: .5s;
 .sign {
   display: flex;
   width: 374px;
+  min-width: 200px;
   // margin-left: 94px;
   font-family: Montserrat;
   font-style: normal;
@@ -139,4 +143,78 @@ $transition-duration-long: .5s;
 .wide {
   min-width: 480px;
   margin-right: 34px;
+}
+
+@media screen and (max-width: 1291px) {
+  .flex {
+    flex-flow: row wrap;
+    justify-content: center;
+  }
+  .wide {
+    margin-right: 0;
+  }
+  
+  .golden-sign {
+    font-size: 36px;
+    margin-left: 0px;
+    text-align: center;  
+    &::after {
+      content: '';
+      display: block;
+      position: absolute;
+      top: -5%;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 36px;
+      height: 2px;
+      margin-right: 28px;
+    }
+  }
+   .sign {
+    text-align: center;
+    font-size: 15px;
+  }
+}
+@media screen and (max-width: 1024px) {
+  .margin {
+    width: 80%;
+  }
+  
+  .standard-block {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 80px 15px;
+  }
+  .btn {
+    max-height: 48px;
+    font-size: 14px;
+    // margin-bottom: 7px;
+  }
+ 
+}
+@media screen and (max-width: 650px) {
+  .margin {
+    width: 95%;
+  }
+}
+@media screen and (max-width: 400px) {
+  .golden-sign {
+    font-size: 31px;
+  }
+  .sign {
+    font-size: 13px;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .sign {
+    max-width: 330px;
+  }
+}
+
+@media screen and (max-width: 330px) {
+  .sign {
+    max-width: 300px;
+  }
 }
